@@ -1,12 +1,19 @@
 {
-  "timestamp" : "2022-11-14T01:40:12Z",
+  "timestamp" : "2022-11-17T01:37:41Z",
   "count_outdated" : 353,
   "uniques_outdated" : 216,
-  "count" : 354,
-  "uniques" : 217,
+  "count" : 355,
+  "uniques" : 218,
   "clones" : [
     {
       "timestamp": "2022-11-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-16T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
